resources/ingress/api-keptn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # We allow HTTP and HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Instructs the controller to send TLS connections directly 
    #to the backend instead of letting NGINX decrypt the communication
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # In some scenarios the exposed URL in the backend service differs
    # from the specified path in the Ingress rule. Without a
    # rewrite any request will return 404
    nginx.ingress.kubernetes.io/rewrite-target: /
    #cert-manager.io/cluster-issuer: "letsencrypt"
  name: api-keptn-ingress
  namespace: keptn
spec:
  rules:
  - host: keptn.domain.placeholder
    http:
      paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: api-gateway-nginx
              port: 
                number: 80
  tls:
  - hosts:
    - keptn.domain.placeholder
    #secretName: keptn-tls
