resources/ingress/jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    #cert-manager.io/cluster-issuer: "letsencrypt"
    # We allow HTTP and HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: jenkins-ingress
  namespace: jenkins
spec:
  rules:
  - host: jenkins.domain.placeholder
    http:
      paths:
       - path: /
         pathType: Prefix      
         backend:
           service:
             name: jenkins
             port:
               number: 8080
  tls:
  - hosts:
    - jenkins.domain.placeholder
    #secretName: jenkins-tls
