resources/ingress/k8-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #cert-manager.io/cluster-issuer: "letsencrypt" 
spec:
  rules:
  - host: api.kubernetes.domain.placeholder
    http:
      paths:
       - path: /
         pathType: Prefix      
         backend:
           service:
             name: kubernetes
             port:
               number: 443
  tls:
  - hosts:
    - api.kubernetes.domain.placeholder
    #secretName: k8-api-tls
