resources/ingress/keptnorders.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # We allow HTTP and HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Instructs the controller to send TLS connections directly
    #to the backend instead of letting NGINX decrypt the communication
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # In some scenarios the exposed URL in the backend service differs
    # from the specified path in the Ingress rule. Without a
    # rewrite any request will return 404
    nginx.ingress.kubernetes.io/rewrite-target: /
    #cert-manager.io/cluster-issuer: "letsencrypt"
  name: keptnorders-ingress
  namespace: istio-system
spec:
  rules:
  # On base domain we have NGINX running.
  # Deploy Keptn Teaser
  - host: frontend.keptnorders-production.domain.placeholder
    http:
      paths:
       - path: /
         pathType: Prefix       
         backend:
           service:
             name: frontend
             port:
               number: 80
  - host: frontend.keptnorders-staging.domain.placeholder
    http:
      paths:
       - path: /
         pathType: Prefix     
         backend:
           service:
             name: frontend
             port:
               number: 80
  - host: catalog.keptnorders-staging.domain.placeholder
    http:
      paths:
       - path: /
         pathType: Prefix       
         backend:
           service:
             name: catalog
             port:
               number: 80
  - host: customer.keptnorders-staging.domain.placeholder
    http:
      paths:
       - path: /
         pathType: Prefix       
         backend:
           service:
             name: customer
             port:
               number: 80
  - host: order.keptnorders-staging.domain.placeholder
    http:
      paths:
       - path: /
         pathType: Prefix      
         backend:
           service:
             name: order
             port: 
               number: 80                   
  tls:
  - hosts:
    - frontend.keptnorders-production.domain.placeholder
    - frontend.keptnorders-staging.domain.placeholder
    - catalog.keptnorders-staging.domain.placeholder
    - customer.keptnorders-staging.domain.placeholder
    - order.keptnorders-staging.domain.placeholder
    #secretName: frontend-tls
