resources/ingress/unleash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # We allow HTTP and HTTPS
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # Instructs the controller to send TLS connections directly 
    #to the backend instead of letting NGINX decrypt the communication
    #nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # In some scenarios the exposed URL in the backend service differs
    # from the specified path in the Ingress rule. Without a
    # rewrite any request will return 404
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #cert-manager.io/cluster-issuer: "letsencrypt"
  name: unleash-ingress
  namespace: istio-system
spec:
  tls:
  - hosts: 
      - unleash.unleash-dev.domain.placeholder
    #secretName: unleash.unleash-dev.domain.placeholder
  rules:
  # Wildcard routing for all exposed istio services. 
  # Kubernetes Fake Certificate will be used if hostname 
  # (SNI) does not match the rules below. 
  - host: unleash.unleash-dev.domain.placeholder
    http:
      paths:
       - path: /
         pathType: Prefix      
         backend:
           service:
             name: unleash
             port:
               number: 80
